[package]
name = "qrrust"
version = "0.1.0"
authors = ["Reid <reid.atcheson@nag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
[dev-dependencies]
ndarray-rand = "0.11.0"
rand = "0.7"
float-cmp = "0.5.3"
